# ripple

./: Cargo.toml  README.md
src/: camera.rs  main.rs  mesh.rs  mesh_grid.rs  pipeline_2d.wgsl  pipeline_prism.wgsl  renderer.rs  shader.wgsl  sim_renderer.rs  simulation.rs  texture.rs
src/shaders/: pipeline_prism.wgsl
